src/features/collections/Collections.module.scss
@import "../../common/colors";

$border: 1px solid use-color("base-lighter");

.collection_wrapper {
  background-color: use-color("base-lightest");
  display: flex;
  height: auto;
  height: 100%;
  width: 100%;
}

.collection_wrapper .collection_main {
  flex: 1;
  overflow: hidden;
}

.collection_detail,
.data_product_detail {
  background-color: use-color("white");
  border: $border;
  padding: 10px;
}

.detail_header {
  align-items: center;
  display: flex;
  flex-flow: row nowrap;
  font-size: 24px;
  gap: 10px;
  justify-content: stretch;
  width: 100%;

  > * {
    flex-grow: 1;
    flex-shrink: 1;
  }

  > img {
    flex-grow: 0;
    flex-shrink: 0;
    height: 64px;
    width: 64px;
  }
}

.data_products {
  align-items: stretch;
  background-color: use-color("white");
  display: flex;
  flex-flow: row nowrap;
  width: 100%;

  > .data_product_list {
    flex-grow: 0;
    flex-shrink: 0;
    width: 8em;
  }

  > .data_product_detail {
    border-left: 0;
    flex-grow: 1;
    flex-shrink: 1;
    min-height: 100px;
    min-width: 10%;
  }
}

.match-highlight {
  background-color: use-color("warning-lighter");
}

.collection_toolbar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.dp_columns {
  display: flex;
  flex-flow: row;
  gap: 5px;
  max-width: 100%;
  overflow: hidden;

  >* {
    flex-basis: 1%;
    flex-grow: 1;
    flex-shrink: 0;
    overflow: auto;
  }
}

.grayscale {
  filter: grayscale(100%);
}

.sidebar-header h1 {
  font-size: 1.25rem;
  font-weight: normal;
  margin: 0;
  margin-bottom: 0.5rem;
  text-align: center;
}

.sidebar-image-wrapper {
  margin-bottom: 1rem;
  margin-top: 1rem;
  text-align: center;
}

